--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,6 @@
 .site {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr 3fr;
   grid-template-rows: 70vh 30vh;
   grid-template-areas:
     "aside main"
@@ -19,11 +19,13 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  margin-top: 50px;
 }
 
 .site > main > h1 {
   font-weight: 400;
   font-size: 20px;
+  margin-top: 50px;
 }
 
 .site > main > img {
@@ -35,35 +37,29 @@
   flex-direction: column;
   align-items: center;
   justify-items: center;
+  margin-top: 30px;
 }
 
-.site > main > .form > .form__input_username,
-.form__label_username {
-  transition: all 0.2s;
-  touch-action: manipulation;
-}
-.site > main > .form > .form__input_username,
-.form__input_password {
-  border: 0;
-  padding: 5px 2px;
-  border-bottom: 1px solid #ccc;
-  background-color: transparent;
+.site > main > .form > .form__input {
+  border: 1px solid #707070;
+  border-radius: 50px;
   outline: none;
+  padding: 10px 25px;
+  margin: 5px;
 }
 
-.site > main > .form > .form__input_username:focus,
-.form__input_password:focus {
-  border-bottom: 2px solid #a942dd;
-  transition: 0.4s;
-}
-
-.site > main > .form > .form__input_username:focus + .form__label_username {
-  color: #aaa;
-  transform-origin: top left;
-  transform: 10%;
-  z-index: -1;
+.site > main > .form > button {
+  background-color: #a942dd;
+  border: none;
+  border-radius: 50px;
+  padding: 10px 25px;
+  color: white;
+  cursor: pointer;
 }
 
 .site > footer {
   grid-area: footer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
